    + [NT] Ensure that all dependency collections of a check are
      loaded.  Previously Lintian would only load direct
      dependencies of a collection and assume that was enough.

  * lib/Lab/Package.pm:
    + [NT] Symlink in all components of the source package when
      creating the source entry in the lab.  Also removed legacy
      code for using the old unpack scripts.
  * lib/Lintian/Collect/Package.pm:
    + [NT] New file.  This serves as a base for Lintian::Collect
      modules that can be unpacked.
  * lib/Lintian/Command.pm:
    + [NT] Added support for appending output to files without
      truncating them first via the new out_append and
      err_append options.
  * lib/Lintian/{Internal/FrontendUtil,Profile}.pm:
    + [NT] New files.
  * lib/Lintian/{Tag/Info,Tags}.pm:
    + [NT] Updated for profile support.

  * man/lintian.pod.in:
    + [NT] Documented the new --profile option.  Note that the
      options --suppress-tags{,-from-file} now supresses tags
      in the active profile.
  * man/lintian-info.pod:
    + [NT] Documented the new --profile option.

  * profiles/*:
    + [NT] Added default profiles for Debian and Ubuntu.  Note
      that these profiles will silently ignore overrides for
      "fatal" (non-overridable) tags.  (Closes: #536364)

  * unpack/unpack-srcpkg-l1:
    + [NT] Removed in favour of the collection system.

 -- Niels Thykier <niels@thykier.net>  Sun, 19 Jun 2011 13:39:10 +0200

lintian (2.5.1) unstable; urgency=low

  * Summary of tag changes:
    + Added:
      - bad-perm-for-file-in-etc-sudoers.d
      - debian-rules-missing-recommended-target
      - dh_pycentral-is-obsolete
      - dh_python-is-obsolete
      - illegal-multi-arch-value
      - non-empty-dependency_libs-in-la-file
    + Removed:
      - uses-dh-python-with-no-pycompat
      - ldconfig-symlink-before-shlib-in-deb

  * checks/binaries:
    + [NT] Applied patch from Paul Wise to detect binaries embeddeding